--- a/pr2/shop/templates/shop/index.html
+++ b/pr2/shop/templates/shop/index.html
@@ -16,18 +16,19 @@ width: 170px;
 height: 200px;
 }
 .navbar {
-    position: fixed;
-    top: 0;
-    width: 100%;
-    z-index:1;
-  }
-  
+position: fixed;
+top: 0;
+width: 100%;
+z-index:1;
+opacity:1;
+}
+
 body .carousel-indicator li{
 background-color: blue;
 }
 
 body .carousel-indicators{
-bottom: 0;
+bottom: -15px;
 }
 
 body .carousel-control-prev-icon,
@@ -75,8 +76,8 @@ padding-right: 0;
                         <div class="card align-items-center" style="width: 18rem;">
                             <img src='/media/{{i.image}}' class="card-img-top" alt="...">
                             <div class="card-body">
-                                <h5 class="card-title">{{i.product_name}}</h5>
-                                <p class="card-text">{{i.desc|slice:"0:53"}}...</p>
+                                <h5 class="card-title" id="namepr{{i.id}}">{{i.product_name}}</h5>
+                                <p class="card-text">{{i.desc|slice:"0:23"}}...</p>
                                 <span id="divpr{{i.id}}" class="divpr">
                                     <button id="pr{{i.id}}" class="btn btn-primary cart">Add To Cart</button>
                                 </span>
@@ -87,14 +88,7 @@ padding-right: 0;
                     </div>
                     {% if forloop.counter|divisibleby:3 and forloop.counter > 0 and not forloop.last %}
                 </div>
-                <div class="carousel-item">
-                    {% endif %}
-
-                    {% endfor %}
-                </div>
-
-
-
+                <div class="carousel-item">{% endif %}{% endfor %}</div>
             </div>
         </div>
         <!-- left and right controls for the slide -->
@@ -111,50 +105,77 @@ padding-right: 0;
 
 {% block js %}
 <script>
-// Find out the cart items from localStorage
-if (localStorage.getItem('cart') == null) {
-    var cart = {};
-} else {
-    cart = JSON.parse(localStorage.getItem('cart'));
-    document.getElementById('cart').innerHTML = Object.keys(cart).length;
-    updateCart(cart);
-}
-// If the add to cart button is clicked, add/increment the item
-$('.cart').click(function() {
-    var idstr = this.id.toString();
-    if (cart[idstr] != undefined) {
-        cart[idstr] = cart[idstr] + 1;
-    } else {
-        cart[idstr] = 1;
+    // Find out the cart items from localStorage
+    if (localStorage.getItem('cart') == null) {
+        var cart = {};
     }
-    updateCart(cart);
-    
-});
-//Add Popover to cart
-$('#popcart').popover();
-document.getElementById("popcart").setAttribute('data-content', '<h5>Cart for your items in my shopping cart</h5>');
+    else {
+        cart = JSON.parse(localStorage.getItem('cart'));
+        updateCart(cart);
+    }
+    // If the add to cart button is clicked, add/increment the item
+    // $('.cart').click(function () {
+    $('.divpr').on('click','button.cart',function(){
+        var idstr = this.id.toString();
+        if (cart[idstr] != undefined) {
+            qty = cart[idstr][0] + 1;
+        } else {
+            qty = 1;
+            name = document.getElementById('name'+idstr).innerHTML
+            cart[idstr] = [qty,name];
+        }
+        updateCart(cart);
+    });
 
-function updateCart(cart) {
-    for (var item in cart) {
-        document.getElementById('div' + item).innerHTML = "<button id='minus" + item + "' class='btn btn-primary minus'>-</button> <span id='val" + item + "''>" + cart[item] + "</span> <button id='plus" + item + "' class='btn btn-primary plus'> + </button>";
+    // $('#popcart').popover();
+    function updatePopover(cart) {
+        var popStr = "<h5> Cart for your items in my shopping cart </h5><div class='mx-2 my-2'>";
+        var i = 1;
+        for (var item in cart) {
+            popStr += "<b>" + i + ". </b>" + document.getElementById('name' + item).innerHTML.slice(0, 18) + "... Qty: " + cart[item][0] + '<br>';
+            i++;
+        }
+        popStr += "</div><a href='/shop/checkout'><button class='btn btn-primary mx-2' id='checkout'> Checkout </button></a><button class='btn btn-primary' onclick='clearCart()' id='clearCart'> Clear Cart </button> "
+        document.getElementById('popcart').setAttribute('data-content', popStr);
+        $('#popcart').popover('show');
     }
-    localStorage.setItem('cart', JSON.stringify(cart));
-    document.getElementById('cart').innerHTML = Object.keys(cart).length;
-    console.log(cart);
-}
-// If plus or minus button is clicked, change the cart as well as the display value
-$('.divpr').on("click", "button.minus", function() {
-    a = this.id.slice(6, );
-    cart['pr' + a] = cart['pr' + a] - 1;
-    cart['pr' + a] = Math.max(0, cart['pr' + a]);
-    document.getElementById('valpr' + a).innerHTML = cart['pr' + a];
-    updateCart(cart);
-});
-$('.divpr').on("click", "button.plus", function() {
-    a = this.id.slice(6, );
-    cart['pr' + a] = cart['pr' + a] + 1;
-    document.getElementById('valpr' + a).innerHTML = cart['pr' + a];
-    updateCart(cart);
-});
+    //Update cart
+    function updateCart(cart) {
+        var sum = 0;
+        for (var item in cart) {
+            sum += cart[item][0];
+            document.getElementById('div' + item).innerHTML = "<button id='minus" + item + "' class='btn btn-primary minus'>-</button> <span id='val" + item + "''>" + cart[item][0] + "</span> <button id='plus" + item + "' class='btn btn-primary plus'> + </button>";
+        }
+        localStorage.setItem('cart', JSON.stringify(cart));
+        document.getElementById('cart').innerHTML = sum;
+        updatePopover(cart)
+    }
+
+    function clearCart() {
+        cart = JSON.parse(localStorage.getItem('cart'));
+        for (var item in cart) {
+            document.getElementById('div' + item).innerHTML = '<button id="' + item + '" class="btn btn-primary cart">Add To Cart</button>'
+        }
+        localStorage.clear(); 
+        cart={};
+        updateCart(cart);
+    }
+
+    // If plus or minus button is clicked, change the cart as well as the display value
+    $('.divpr').on("click", "button.minus", function () {
+        a = this.id.slice(5,);
+        cart[a][0] -= 1;
+        cart[a][0] = Math.max(0, cart[a][0]);
+        document.getElementById('val' + a).innerHTML = cart[a][0];
+        updateCart(cart);
+    });
+
+    $('.divpr').on("click", "button.plus", function () {
+        a = this.id.slice(4,);
+        cart[a][0] += 1;
+        document.getElementById('val' + a).innerHTML = cart[a][0];
+        updateCart(cart);
+    });
+
 </script>
 {% endblock %}
